...
    add more favorites when other favorites have already been added. -->
    <string name="add_favorite_stops">Add favorite stops</string>
    <string name="add_favorite_title">Add Favorite</string>
    <string name="add_to_favorites_title">Add &lt;b&gt;%1$s&lt;/b&gt; at &lt;b&gt;%2$s&lt;/b&gt;</string>
    <string name="add_to_favorites_title_stop_details">Add &lt;b&gt;%1$s&lt;/b&gt; at &lt;b&gt;%2$s&lt;/b&gt; to Favorites</string>
...
    <string name="bus_suspended">Bus suspended</string>
    <string name="buses">buses</string>
    <string name="cancel">Cancel</string>
    <string name="cancellation">Cancellation</string>
    <string name="cancelled">Cancelled</string>
...
    <string name="edit">Edit</string>
    <string name="edit_favorite">edit favorite</string>
    <string name="edit_favorite_title">Edit Favorite</string>
    <string name="edit_favorites">Edit Favorites</string>
    <string name="effect" translatable="false">&lt;b&gt;%1$s&lt;/b&gt;</string>
...
    <string name="from">From</string>
    <string name="full_description">Full Description</string>
    <string name="get_disruption_notifications">Get disruption notifications</string>
    <string name="good_morning">Good morning!</string>
    <string name="got_it">Got it</string>
    <string name="group_by_direction" translatable="false">Group by Direction</string>
    <string name="hazmat_condition">Hazmat Condition</string>
...
    <string name="now_at">Now at</string>
    <string name="okay">Okay</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_feedback_advance">Get started</string>
    <string name="onboarding_feedback_body">MBTA Go is in the early stages! We want your feedback as we continue making improvements and adding new features.</string>
    <string name="onboarding_feedback_header">Help us improve</string>
    <string name="onboarding_location_body">We use your location to show you nearby transit options.</string>
    <string name="onboarding_location_footer">You can always change location settings later in the Settings app.</string>
    <string name="onboarding_location_header">See transit near you</string>
    <string name="onboarding_map_display_body">When using TalkBack, we can hide maps to make the app easier to navigate.</string>
    <string name="onboarding_map_display_header">Set map display preference</string>
    <string name="onboarding_station_accessibility_body">By opting in, we can show you which stations are inaccessible or have elevator closures.</string>
    <string name="onboarding_station_accessibility_header">Set station accessibility info preference</string>
    <string name="only_direction_to">Only %1$s to</string>
    <string name="only_served_at_certain_times">Only served at certain times of day</string>
...
    <string name="promo_favorites_body">Now save your frequently used stops to &lt;b&gt;one easy place&lt;/b&gt;.</string>
    <string name="promo_favorites_header">Add your favorites</string>
    <string name="promo_notifications_body">We’ll tell you about any problems before you go!</string>
    <string name="promo_notifications_header">Now get disruption notifications</string>
    <string name="promo_notifications_step1">Add a Favorite stop</string>
    <string name="promo_notifications_step2">Set your own schedule</string>
    <string name="rail_defect">Rail Defect</string>
    <string name="rail_defect_lowercase">rail defect</string>
...
    <string name="remove">Remove</string>
    <string name="remove_favorite">remove favorite</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="resources_link_fare_info">Fare Information</string>
    <string name="resources_link_mticket">Commuter Rail and Ferry Tickets</string>
...
    <string name="route_mode_label">%1$s %2$s</string>
    <string name="routes">Routes</string>
    <string name="save">Save</string>
    <string name="schedule_change">Schedule Change</string>
    <string name="schedule_change_sentence_case">Schedule change</string>
...
    <string name="service_ended">Service ended</string>
    <string name="service_suspended">Service suspended</string>
    <string name="setting_station_accessibility">Station Accessibility Info</string>
    <string name="setting_toggle_map_display">Map Display</string>
    <string name="settings_link">Settings</string>
    <string name="severe_weather">Severe Weather</string>
...
    <string name="to_lowercase">to</string>
    <string name="toast_tip_prefix">Tip: %1$s</string>
    <string name="toggle_direction">toggle direction</string>
    <string name="track_change">Track Change</string>
    <string name="track_change_sentence_case">Track change</string>
...
