...
            route =
                Route(
                    id = Route.Id("Orange"),
                    type = RouteType.HEAVY_RAIL,
                    color = "ED8B00",
                    directionNames = listOf("South", "North"),
                    directionDestinations = listOf("Forest Hills", "Oak Grove"),
                    isListedRoute = true,
                    longName = "Orange Line",
                    shortName = "",
                    sortOrder = 10020,
                    textColor = "FFFFFF",
                    lineId = Line.Id("line-Orange"),
...
