package com.mbta.tid.mbta_app.android.onboarding

import androidx.compose.ui.semantics.Role
import androidx.compose.ui.test.assertIsOff
import androidx.compose.ui.test.assertIsOn
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.junit4.v2.createComposeRule
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.test.rule.GrantPermissionRule
import com.mbta.tid.mbta_app.android.location.MockLocationDataManager
import com.mbta.tid.mbta_app.android.testUtils.assertCanBeDisplayed
import com.mbta.tid.mbta_app.android.testUtils.hasRole
import com.mbta.tid.mbta_app.android.util.SettingsCache
import com.mbta.tid.mbta_app.model.OnboardingScreen
import com.mbta.tid.mbta_app.repositories.MockSettingsRepository
import com.mbta.tid.mbta_app.repositories.Settings
import kotlin.test.assertEquals
import kotlin.test.assertTrue
import kotlinx.coroutines.test.UnconfinedTestDispatcher
import org.junit.Rule
import org.junit.Test

class OnboardingScreenViewTest {
    @get:Rule val composeTestRule = createComposeRule(effectContext = UnconfinedTestDispatcher())

    // We can't easily mock the permission request, so we grant the permission eagerly.
    @get:Rule
    val runtimePermissionRule =
        GrantPermissionRule.grant(android.Manifest.permission.ACCESS_FINE_LOCATION)

    @Test
    fun testLocationFlow() {
        var advanced = false
        val locationDataManager = MockLocationDataManager()
        composeTestRule.setContent {
            OnboardingScreenView(
                screen = OnboardingScreen.Location,
                advance = { advanced = true },
                locationDataManager = locationDataManager,
            )
        }

        composeTestRule
            .onNodeWithText(
                "We use your location to show you nearby transit options.",
                substring = true,
            )
            .assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Continue").performClick()

        composeTestRule.waitForIdle()
        assertTrue(advanced)
    }

    @Test
    fun testStationAccessibilityFlow() {
        var savedSetting = false
        val settingsRepo =
            MockSettingsRepository(
                settings = mapOf(Settings.StationAccessibility to false),
                onSaveSettings = { settings ->
                    assertTrue(settings.getValue(Settings.StationAccessibility))
                    savedSetting = true
                },
            )
        var advanced = false
        composeTestRule.setContent {
            OnboardingScreenView(
                screen = OnboardingScreen.StationAccessibility,
                advance = { advanced = true },
                locationDataManager = MockLocationDataManager(),
                settingsCache = SettingsCache(settingsRepo),
            )
        }

        composeTestRule
            .onNodeWithText("Set station accessibility info preference")
            .assertCanBeDisplayed()
        composeTestRule
            .onNodeWithText(
                " we can show you which stations are inaccessible or have elevator closures.",
                substring = true,
            )
            .assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Continue").assertCanBeDisplayed()
        composeTestRule
            .onNode(hasText("Station Accessibility Info") and hasRole(Role.Switch))
            .performClick()

        composeTestRule.waitForIdle()
        assertTrue(savedSetting)
        composeTestRule.onNodeWithText("Continue").performClick()
        composeTestRule.waitForIdle()

        assertTrue(advanced)
    }

    @Test
    fun testMapDisplayFlow() {
        var savedSetting = false
        val settingsRepo =
            MockSettingsRepository(
                settings = mapOf(Settings.HideMaps to false),
                onSaveSettings = {
                    assertEquals(mapOf(Settings.HideMaps to false), it)
                    savedSetting = true
                },
            )
        var advanced = false
        composeTestRule.setContent {
            OnboardingScreenView(
                screen = OnboardingScreen.HideMaps,
                advance = { advanced = true },
                locationDataManager = MockLocationDataManager(),
                settingsCache = SettingsCache(settingsRepo),
            )
        }
        composeTestRule
            .onNodeWithText(
                "When using TalkBack, we can hide maps to make the app easier to navigate."
            )
            .assertCanBeDisplayed()

        composeTestRule.waitForIdle()

        composeTestRule
            .onNodeWithText("Map Display")
            .assertCanBeDisplayed()
            .assertIsOff()
            .performClick()

        composeTestRule.waitForIdle()

        composeTestRule.onNodeWithText("Map Display").assertIsOn()

        composeTestRule.onNodeWithText("Continue").assertCanBeDisplayed().performClick()
        composeTestRule.waitForIdle()
        assertTrue(savedSetting)
        assertTrue(advanced)
    }

    @Test
    fun testNotificationsBetaFlow() {
        var advanced = false
        composeTestRule.setContent {
            OnboardingScreenView(
                screen = OnboardingScreen.NotificationsBeta,
                advance = { advanced = true },
                locationDataManager = MockLocationDataManager(),
            )
        }
        composeTestRule.onNodeWithText("Get disruption notifications").assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Add a Favorite stop").assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Set your own schedule").assertCanBeDisplayed()
        composeTestRule
            .onNodeWithText("We’ll tell you about any problems before you go!")
            .assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Got it").performClick()

        composeTestRule.waitForIdle()
        assertTrue(advanced)
    }

    @Test
    fun testFeedbackFlow() {
        var advanced = false
        composeTestRule.setContent {
            OnboardingScreenView(
                screen = OnboardingScreen.Feedback,
                advance = { advanced = true },
                locationDataManager = MockLocationDataManager(),
            )
        }
        composeTestRule
            .onNodeWithText(
                "MBTA Go is in the early stages! We want your feedback" +
                    " as we continue making improvements and adding new features."
            )
            .assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Get started").performClick()

        composeTestRule.waitForIdle()
        assertTrue(advanced)
    }
}
